--- a/Project Code/Final_Data_Extraction_for_Pathology_Classification_Project.ipynb
+++ b/Project Code/Final_Data_Extraction_for_Pathology_Classification_Project.ipynb
@@ -913,6 +913,54 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "CeCLZaXivWpi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 319
+        },
+        "outputId": "c1342a44-16bf-426a-9e67-7261c33934e2"
+      },
+      "source": [
+        "# Count number of images from each 16 subfolders (Train + Val)\n",
+        "from glob import glob\n",
+        "\n",
+        "print('Total Images')\n",
+        "for sub in classes:\n",
+        "  folder_train = glob('/content/Capstone_Project/train/{}/*'.format(sub))\n",
+        "  folder_val   = glob('/content/Capstone_Project/val/{}/*'.format(sub))\n",
+        "  print('Number of images in {} is '.format(sub),len(folder_train+folder_val))"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation Images\n",
+            "Number of images in Atelectasis is  11559\n",
+            "Number of images in Cardiomegaly is  2776\n",
+            "Number of images in Effusion is  13317\n",
+            "Number of images in Infiltration is  19894\n",
+            "Number of images in Mass is  5782\n",
+            "Number of images in Nodule is  6331\n",
+            "Number of images in Pneumonia is  1431\n",
+            "Number of images in Pneumothorax is  5302\n",
+            "Number of images in Consolidation is  4667\n",
+            "Number of images in Edema is  2303\n",
+            "Number of images in Emphysema is  2516\n",
+            "Number of images in Fibrosis is  1686\n",
+            "Number of images in Pleural_Thickening is  3385\n",
+            "Number of images in Hernia is  227\n",
+            "Number of images in Covid19 is  0\n",
+            "Number of images in No Finding is  60361\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "LpsJ_wL9rLOK",
         "colab_type": "code",
         "colab": {}
